syntax = "proto3";

package profile;

option go_package = "github.com/LavaJover/shvark-profile-service/proto/gen;profilepb";

service ProfileService {
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
}

message GetProfileRequest {
    string user_id = 1;
}

message GetProfileResponse {
    string user_id = 1;
    string username = 2;
    string avatar_url = 4;
    string bio = 5;
}

message UpdateProfileRequest {
    string user_id = 1;
    string username = 2;
    string avatar_url = 3;
    string bio = 4;
}

message UpdateProfileResponse {}